--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,9 +24,15 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+        with: 
+          ref: development
+      
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: sudo apt-get install python3 pip3
+      - name: Install python
+        run: sudo apt-get update && sudo apt-get install python3 python3-pip
+
+      - name: Install necessary libs
+        run: sudo pip3 install urwid asyncio humanize
 
       
