--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,10 @@ jobs:
         run: sudo apt-get update && sudo apt-get install python3 python3-pip
 
       - name: Install necessary libs
-        run: sudo pip3 install urwid asyncio humanize
+        run: sudo pip3 install urwid asyncio humanize pytest pytest-cov
+
+      - name: Run tests
+        run: pytest tests/ --cov logic --cov-report json
+      
 
       
