--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,7 +36,7 @@ jobs:
         run: sudo pip3 install urwid asyncio humanize pytest pytest-cov
 
       - name: Run tests
-        run: pytest tests/ --cov logic --cov-report json
+        run: pytest tests/ --cov logic --cov-report json:coverage/coverage-summary.json
 
       - name: Update coverage badge
         uses: we-cli/coverage-badge-action@main
