--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,13 +33,19 @@ jobs:
         run: sudo apt-get update && sudo apt-get install python3 python3-pip
 
       - name: Install necessary libs
-        run: sudo pip3 install urwid asyncio humanize pytest pytest-cov
+        run: sudo pip3 install urwid asyncio humanize pytest pytest-cov coverage-badge
 
       - name: Run tests
         run: pytest tests/ --cov logic --cov-report json:coverage/coverage.json
       
       - name: Reformat coverage
-        run: (cd coverage && python3 covgen.py)
+        run: |
+            coverage-badge -o badge.svg
+            git switch gh-pages
+            git add badge.svg
+            git commit -m "Updated badge"
+            git push origin gh-pages
+        
       
       - name: Update coverage badge
         uses: we-cli/coverage-badge-action@main
