--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install python3 python3-pip
 
       - name: Install necessary libs
-        run: sudo pip3 install urwid asyncio humanize pytest pytest-cov coverage-badge
+        run: sudo pip3 install urwid asyncio humanize pytest pytest-cov coverage-badge pytest-asyncio
 
       - name: Run tests
         run: pytest tests/ --cov logic --cov-report json:coverage/coverage.json
@@ -47,7 +47,7 @@ jobs:
             git config --global user.name "Vladislav Glazkov"
             git add badge.svg
             git switch -c gh-pages --track origin/gh-pages
-            git commit -m "Updated badge"
+            git commit --allow-empty -m "Updated badge"
             git push origin gh-pages
         
     
