--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,7 +19,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -55,7 +55,44 @@ jobs:
             git stash pop
             git commit --allow-empty -m "Updated badge"
             git push origin gh-pages
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Install python
+        run: sudo apt-get update && sudo apt-get install python3 python3-pip
         
+      - name: Install necessary libs
+        run: sudo pip3 install urwid asyncio humanize pytest pytest-cov coverage-badge pytest-asyncio pyinstaller
+
+      - name: Build dist
+        run: sudo pyinstaller install.spec
+
+      - name: Archive dist
+        run: tar -czf filemgr.tar /dist/filemgr
+        
+      - name: Create release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./filemgr.tar  # Adjust this to your actual file path
+          asset_name: filemgr.tar  # Adjust this to your actual file name
+          asset_content_type: application/tar  # Adjust this to the correct MIME type
+       
+    
+    
     
 
       
