--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,6 +59,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+      - uses: actions/checkout@v4
+        with: 
+          ref: development
+          
       - name: Install python
         run: sudo apt-get update && sudo apt-get install python3 python3-pip
         
