--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -81,8 +81,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: binary
+          release_name: Release
           draft: false
           prerelease: false
 
