--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -82,7 +82,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: binary
+          tag_name: ${{github.run_id}}
           release_name: Release
           draft: false
           prerelease: false
