--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -68,7 +68,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install python3 python3-pip
         
       - name: Install necessary libs
-        run: sudo pip3 install urwid asyncio humanize pytest pytest-cov coverage-badge pytest-asyncio pyinstaller
+        run: sudo pip3 install urwid asyncio humanize pytest pytest-cov coverage-badge pytest-asyncio pyinstaller debugpy
 
       - name: Build dist
         run: sudo pyinstaller install.spec
